# Installer

./: .gitignore  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: rust.yml
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  log.rs  main.rs  payload.rs  prerequisites.rs  registry.rs  service.rs  shell.rs  shortcuts.rs
